# libautomusic

./: Makefile.am  Makefile.in  README.md  composition-toplevel.cc  composition-toplevel.h  config.h.in  configure  configure.ac  knowledge-model.h  libautomusic.cc  main.cc  model-chord.cc  model-chord.h  model-solo-instrumental.cc  model-solo-instrumental.h  model-solo-melody.cc  model-solo-melody.h  output-base.cc  output-base.h  output-midi.cc  output-midi.h  output-pcm-audio.cc  output-pcm-audio.h  parameter-generator.cc  parameter-generator.h  theory-harmonics.cc  theory-harmonics.h  theory-orchestration.cc  theory-orchestration.h  theory-structure.cc  util-randomize.h
examples/: Makefile.am  Makefile.in  libautomusic.cc
include/: exportdecl.h  libautomusic.h  typedefs.h
models/: knowledge.bank.0.mdel  knowledge.bank.1.mdel  knowledge.bank.10.mdel  knowledge.bank.100.mdel  knowledge.bank.101.mdel  knowledge.bank.102.mdel  knowledge.bank.103.mdel  knowledge.bank.104.mdel  knowledge.bank.105.mdel  knowledge.bank.106.mdel  knowledge.bank.107.mdel  knowledge.bank.108.mdel  knowledge.bank.109.mdel  knowledge.bank.11.mdel  knowledge.bank.110.mdel  knowledge.bank.111.mdel  knowledge.bank.112.mdel  knowledge.bank.113.mdel  knowledge.bank.114.mdel  knowledge.bank.115.mdel  knowledge.bank.116.mdel  knowledge.bank.117.mdel  knowledge.bank.118.mdel  knowledge.bank.119.mdel  knowledge.bank.12.mdel  knowledge.bank.120.mdel  knowledge.bank.121.mdel  knowledge.bank.122.mdel  knowledge.bank.123.mdel  knowledge.bank.124.mdel  knowledge.bank.125.mdel  knowledge.bank.126.mdel  knowledge.bank.127.mdel  knowledge.bank.128.mdel  knowledge.bank.129.mdel  knowledge.bank.13.mdel  knowledge.bank.130.mdel  knowledge.bank.131.mdel  knowledge.bank.132.mdel  knowledge.bank.133.mdel  (+183 more)
src/: Makefile.am  Makefile.in  composition-toplevel.cc  composition-toplevel.h  knowledge-model.cc  knowledge-model.h  libautomusic.cc  model-base.cc  model-base.h  model-chord.cc  model-chord.h  model-percussion.cc  model-percussion.h  model-solo-instrumental.cc  model-solo-instrumental.h  model-solo-melody.cc  model-solo-melody.h  output-base.cc  output-base.h  output-midi.cc  output-midi.h  output-music-xml.cc  output-music-xml.h  output-pcm-audio.cc  output-pcm-audio.h  parameter-generator.cc  parameter-generator.h  theory-harmonics.cc  theory-harmonics.h  theory-orchestration.cc  theory-orchestration.h  theory-structure.cc  theory-structure.h  util-math.h  util-randomize.cc  util-randomize.h
src/synth/: tsf.hh
